[package]
name = "wallpaper"
version = "3.2.0"
edition = "2018"
authors = ["reujab <reujab@gmail.com>"]
description = "Gets and sets the desktop wallpaper/background."
repository = "https://github.com/reujab/wallpaper.rs"
readme = "readme.md"
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]
license = "Unlicense"

[dependencies]
dirs = { version = "1", optional = true }
enquote = "1"
rust-ini = "0.12"
thiserror = "1"
reqwest = { version = "0.11", optional = true, features = ["blocking"] }


[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
dirs = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.9"

[features]
from_url = ["dirs", "reqwest"]
